--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -1,98 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <title>Fruit REST service</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css"/>
-    <!-- Load AngularJS -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script type="text/javascript">
-        var app = angular.module("FruitManagement", []);
-
-        //Controller Part
-        app.controller("FruitManagementController", function ($scope, $http) {
-
-            //Initialize page with default data which is blank in this example
-            $scope.fruits = [];
-
-            $scope.form = {
-                name: "",
-                description: ""
-            };
-
-            //Now load the data from server
-            _refreshPageData();
-
-            //HTTP POST methods for add fruits
-            $scope.add = function () {
-                var data = { "name": $scope.form.name, "description": $scope.form.description };
-
-                $http({
-                    method: "POST",
-                    url: '/fruits',
-                    data: angular.toJson(data),
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                }).then(_success, _error);
-            };
-
-            /* Private Methods */
-            //HTTP GET- get all fruits collection
-            function _refreshPageData() {
-                $http({
-                    method: 'GET',
-                    url: '/fruits'
-                }).then(function successCallback(response) {
-                    $scope.fruits = response.data;
-                }, function errorCallback(response) {
-                    console.log(response.statusText);
-                });
-            }
-
-            function _success(response) {
-                _refreshPageData();
-                _clearForm();
-            }
-
-            function _error(response) {
-                alert(response.data.message || response.statusText);
-            }
-
-            //Clear the form
-            function _clearForm() {
-                $scope.form.name = "";
-                $scope.form.description = "";
-            }
-        });
-    </script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="https://kit.fontawesome.com/a3c4a2aaa6.js" crossorigin="anonymous"></script>
 </head>
-<body ng-app="FruitManagement" ng-controller="FruitManagementController">
-
-<div class="container">
-    <h1>REST Service - Fruit</h1>
-
-    <h3>Add a fruit</h3>
-    <form ng-submit="add()">
-        <div class="row">
-            <div class="col-6"><input type="text" placeholder="Name" ng-model="form.name" size="60"/></div>
-        </div>
-        <div class="row">
-            <div class="col-6"><input type="text" placeholder="Description" ng-model="form.description" size="60"/></div>
-        </div>
-        <input type="submit" value="Save"/>
-    </form>
-
-    <h3>Fruit List</h3>
-    <div class="row">
-        <div class="col-4">Name</div>
-        <div class="col-8">Description</div>
-    </div>
-    <div class="row" ng-repeat="fruit in fruits">
-        <div class="col-4">{{ fruit.name }}</div>
-        <div class="col-8">{{ fruit.description }}</div>
-    </div>
-</div>
-
+<body>
+    <header>
+        <button><a href="./registerUser.html">Register</a></button>
+        <h2>Fresh Fruits Shop!</h2>
+        <a class="link" href="./personalInventory.html">Personal Inventory</a>
+    </header>
+    <main>
+        <section class="filter">
+            <form class="filter-item">
+                <select name="property" id="property">
+                    <option value="name">Name</option>
+                    <option value="description">Description</option>
+                </select>
+                <input type="text" name="itemValue" id="itemValue" placeholder="Value">
+                <input type="submit" name="filter" value="Filter">
+            </form>
+        </section>
+        <section class="inventory">
+            
+        </section>
+        <section class="inventory-buttons">
+            <button onclick="loadItems()">Reload Inventory</button>
+        </section>
+    </main>
+    <section class="form index-form">
+        <form class="add-del-item">
+            <input type="text" name="name" id="name" required placeholder="Name">
+            <input type="text" name="description" id="description" required placeholder="Description">
+            <section class="form-buttons">
+                <input type="reset" value="Reset">
+                <input class="add" type="submit" name="add" value="Add Fruit">
+                <input class="delete" type="submit" name="delete" value="Delete Fruit">
+            </section>
+        </form>
+    </section>
+<script src="js/main.js"></script>
 </body>
 </html>
